test/spec_vectors/return_call/ok/module_5.wat
(module (func $arity-1-vs-0 (i32.const 1) (return_call 1)) (func))