test/spec_vectors/return_call/fail/module_7.wat
(module (func $type-first-void-vs-num (return_call 1 (nop) (i32.const 1))) (func (param i32 i32)))